==> wwanc/Si5351-STM32/si5351.cpp <==
#include <stdint.h>
#include <string.h>
#include <stdbool.h>
#include <stdlib.h>
#include <fcntl.h>
#include <unistd.h>
#include <stdio.h>
#include "si5351.h"

uint8_t Si5351::si5351_write_bulk(uint8_t addr, uint8_t bytes, uint8_t *data)
{
	HAL_StatusTypeDef status = HAL_OK;

	while (HAL_I2C_IsDeviceReady(i2c_port, (uint16_t)(SI5351_BUS_BASE_ADDR<<1), 3, 100) != HAL_OK) { }

	status = HAL_I2C_Mem_Write(i2c_port,
							  (uint8_t)(SI5351_BUS_BASE_ADDR<<1),
							  addr,
							  I2C_MEMADD_SIZE_8BIT,
							  data,
							  bytes,
							  100);

	return status;
}

uint8_t Si5351::si5351_read(uint8_t addr)
{
	uint8_t reg_val = 0;
	uint8_t data;

	while (HAL_I2C_IsDeviceReady(i2c_port, (uint16_t)(SI5351_BUS_BASE_ADDR<<1), 3, 100) != HAL_OK) { }

	HAL_StatusTypeDef status = HAL_I2C_Mem_Read(i2c_port,
							  (uint8_t)(SI5351_BUS_BASE_ADDR<<1),
							  addr,
							  I2C_MEMADD_SIZE_8BIT,
							  (uint8_t*)(&data),
							  1,
							  100);
	if(status == HAL_OK){
		reg_val = data;
	}
	return reg_val;
}
